fix horizontal scroll

--- a/website/src/styles/globals.css
+++ b/website/src/styles/globals.css
@@ -87,6 +87,7 @@
 body {
   background-color: var(--color-background);
   color: var(--color-foreground);
+  overflow-x: hidden;
 }
 
 mark {
